fix some text alignment issues

--- a/_sass/_base.scss
+++ b/_sass/_base.scss
@@ -25,6 +25,10 @@ body {
     color: $text-color;
     background-color: $background-color;
     -webkit-text-size-adjust: 100%;
+
+    @include media-query($on-palm) {
+        font-size: $base-font-size-mobile;
+    }
 }
 
 
