--- a/css/main.scss
+++ b/css/main.scss
@@ -8,7 +8,9 @@
 // Our variables
 $base-font-family: 'Source Sans Pro', Helvetica, Arial, sans-serif;
 $base-font-size:   24px;
+$base-font-size-mobile:   20px;
 $small-font-size:  $base-font-size * 0.875;
+$small-font-size-mobile:  $base-font-size-mobile * 0.875;
 $base-line-height: 1.5;
 
 $spacing-unit:     30px;
@@ -22,6 +24,7 @@ $grey-color-dark:  darken($grey-color, 25%);
 
 $on-palm:          600px;
 $on-laptop:        800px;
+/* $on-laptop:        1024px; */
 
 $content-width:    1320px;
 $grid-pad:         20px;
